--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="navbar-links">
         <ul>
           <li><a href="https://angelk8.sg-host.com/">Back Home</a></li>
-          <li><a href="#github">Check on GitHub</a></li>
+          <li><a href="https://github.com/Kachev032/image-gallery">Check on GitHub</a></li>
         </ul>
       </div>
     </nav>
